# bok

./: .gitignore  AGENTS.md  README.md  run-app.ps1
.github/workflows/: ios-ipa.yml  windows-ci.yml
desktop-windows/: Directory.Build.props  P2PAudio.sln  README.md  vcpkg.json  vs-build.binlog
desktop-windows/scripts/: Generate-AppIcon.ps1
desktop-windows/src/P2PAudio.Windows.App/: App.xaml  App.xaml.cs  AppIdentity.cs  MainWindow.xaml  MainWindow.xaml.cs  P2PAudio.Windows.App.csproj  StartMenuShortcut.cs  app.manifest
desktop-windows/src/P2PAudio.Windows.Core/: P2PAudio.Windows.Core.csproj
desktop-windows/src/core-webrtc/: CMakeLists.txt  README.md
desktop-windows/src/core-webrtc/include/core_udp_opus/: core_udp_opus_exports.h  udp_sender.h
desktop-windows/src/core-webrtc/include/core_webrtc/: core_webrtc_exports.h  session_controller.h
desktop-windows/src/core-webrtc/src/: core_udp_opus_exports.cpp  core_webrtc_exports.cpp  session_controller.cpp  udp_sender.cpp
desktop-windows/tests/P2PAudio.Windows.App.Tests/: AudioFrameTimingClockTests.cs  LoopbackCaptureOptionsTests.cs  MainViewModelTests.cs  MainViewModelUdpOpusFrameDurationTests.cs  NativeWebRtcLibraryResolverTests.cs  P2PAudio.Windows.App.Tests.csproj  StartMenuShortcutTests.cs
desktop-windows/tests/P2PAudio.Windows.Core.Tests/: ConnectionCodeCodecTests.cs  FailureCodeMapperTests.cs  P2PAudio.Windows.Core.Tests.csproj  PairingPayloadValidatorTests.cs  PcmCaptureNormalizerTests.cs  PcmPacketCodecTests.cs  PcmSequenceGapConcealerTests.cs  QrPayloadCodecTests.cs  VerificationCodeTests.cs
docs/: IMPLEMENTATION_STATUS.md  KNOWN_LIMITATIONS.md  PROTOCOL.md  STATE_MACHINE.md  TEST_MATRIX.md  session-answer.schema.json  session-confirm.schema.json  session-init.schema.json  session-offer.schema.json
mobile-android/: README.md  gradle.properties  settings.gradle.kts
mobile-android/app/: build.gradle.kts
mobile-ios/: README.md  project.yml
mobile-ios/App/: P2PAudio.entitlements  P2PAudioApp.swift
mobile-ios/App/Audio/: AudioPlaybackSession.swift  IOSOpusDecoder.swift  PcmFrame.swift  PcmPacketCodec.swift  PcmPlayer.swift  PlaybackLatencyPreset.swift  UdpOpusPacket.swift  UdpOpusPacketCodec.swift
mobile-ios/App/Capture/: ReplayKitAudioCaptureController.swift
mobile-ios/App/Localization/: L10n.swift
mobile-ios/App/Logging/: AppLogEntry.swift  LogStore.swift
mobile-ios/AudioBroadcastExtension/: SampleHandler.swift
mobile-ios/Tests/: ConnectionCodeCodecTests.swift  PairingPayloadValidatorTests.swift  PcmPlayerQueuePolicyTests.swift  PlaybackLatencyPresetTests.swift  QrPayloadCodecTests.swift  UdpOpusPacketCodecTests.swift
naudio_decompiled/: NAudio.decompiled.cs
(+131 files in other folders)
